--- a/src/base.css
+++ b/src/base.css
@@ -46,3 +46,10 @@ li {
 a {
   text-decoration: none;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
